Branch for release 6.2.3.