@@ -1,15 +1,19 @@
 /*******************************************************************************
- * Copyright (C) 2010 - 2016. TIBCO Software Inc. 
- * All Rights Reserved. Confidential & Proprietary.
+ * Copyright (C) 2005 - 2014 TIBCO Software Inc. All rights reserved.
+ * http://www.jaspersoft.com.
+ * Licensed under commercial Jaspersoft Subscription License Agreement
  ******************************************************************************/
 package com.jaspersoft.studio.components.customvisualization.ui;
 
 import java.beans.PropertyChangeEvent;
 import java.beans.PropertyChangeListener;
+import java.io.BufferedReader;
 import java.io.File;
 import java.io.FileFilter;
 import java.io.IOException;
 import java.io.InputStream;
+import java.io.InputStreamReader;
+import java.math.BigDecimal;
 import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
@@ -40,13 +44,20 @@ import org.eclipse.core.runtime.Status;
 import org.eclipse.jface.util.IPropertyChangeListener;
 import org.eclipse.swt.graphics.Image;
 
+import com.fasterxml.jackson.core.JsonGenerator;
+import com.fasterxml.jackson.core.JsonParseException;
+import com.fasterxml.jackson.databind.JsonMappingException;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import com.jaspersoft.studio.components.customvisualization.CustomVisualizationActivator;
 import com.jaspersoft.studio.components.customvisualization.messages.Messages;
 import com.jaspersoft.studio.components.customvisualization.model.MCustomVisualization;
-import com.jaspersoft.studio.components.customvisualization.ui.framework.CVCWidgetsDescriptor;
-import com.jaspersoft.studio.components.customvisualization.ui.framework.CVCWidgetsDescriptorResolver;
 import com.jaspersoft.studio.components.customvisualization.ui.preferences.CVCDescriptorsPreferencePage;
 import com.jaspersoft.studio.model.util.ItemPropertyUtil;
+import com.jaspersoft.studio.property.itemproperty.desc.ColorPropertyDescription;
+import com.jaspersoft.studio.property.itemproperty.desc.ComboItemPropertyDescription;
+import com.jaspersoft.studio.property.itemproperty.desc.FilePropertyDescription;
+import com.jaspersoft.studio.property.itemproperty.desc.ItemPropertyDescription;
+import com.jaspersoft.studio.property.itemproperty.desc.NumberPropertyDescription;
 import com.jaspersoft.studio.utils.Misc;
 import com.jaspersoft.studio.utils.jasper.JasperReportsConfiguration;
 
@@ -57,14 +68,12 @@ import net.sf.jasperreports.eclipse.util.FileUtils;
 import net.sf.jasperreports.engine.util.ResourceBundleMessageProvider;
 
 public class UIManager {
-	private static Map<String, CVCWidgetsDescriptor> cachePlugin;
-	private static Map<JasperReportsConfiguration, Map<String, CVCWidgetsDescriptor>> cache = new HashMap<JasperReportsConfiguration, Map<String, CVCWidgetsDescriptor>>();
-	private static Map<CVCWidgetsDescriptor, Image> imageCache = new HashMap<CVCWidgetsDescriptor, Image>();
-	private static Map<CVCWidgetsDescriptor, String> parentsPath = new HashMap<CVCWidgetsDescriptor, String>();
+	private static Map<String, ComponentDescriptor> cachePlugin;
+	private static Map<JasperReportsConfiguration, Map<String, ComponentDescriptor>> cache = new HashMap<JasperReportsConfiguration, Map<String, ComponentDescriptor>>();
+	private static Map<ComponentDescriptor, Image> imageCache = new HashMap<ComponentDescriptor, Image>();
+	private static Map<ComponentDescriptor, String> parentsPath = new HashMap<ComponentDescriptor, String>();
 	private static IResourceChangeListener listener = new ResourceChangeReporter();
-	private static final CVCWidgetsDescriptorResolver RESOLVER = new CVCWidgetsDescriptorResolver();
-	
-	
+
 	static {
 		ResourcesPlugin.getWorkspace().addResourceChangeListener(listener,
 				IResourceChangeEvent.PRE_CLOSE | IResourceChangeEvent.PRE_DELETE | IResourceChangeEvent.POST_CHANGE);
@@ -72,7 +81,7 @@ public class UIManager {
 
 	public static class ResourceChangeReporter implements IResourceChangeListener {
 		private boolean checkInPaths(IResourceDelta rd) {
-			if (rd.getFullPath() != null && rd.getResource() != null && rd.getResource().getRawLocationURI() != null) {
+			if (rd.getFullPath() != null) {
 				String rpath = rd.getResource().getRawLocationURI().toASCIIString();
 				for (String path : parentsPath.values()) {
 					if (path.startsWith("bundle"))
@@ -107,7 +116,7 @@ public class UIManager {
 		}
 	}
 
-	public static CVCWidgetsDescriptor getComponentDescriptor(MCustomVisualization model) {
+	public static ComponentDescriptor getComponentDescriptor(MCustomVisualization model) {
 		List<ItemProperty> props = model.getComponent().getItemProperties();
 		if (props != null) {
 			ItemProperty p = ItemPropertyUtil.getProperty(props, "module");
@@ -121,7 +130,7 @@ public class UIManager {
 		return null;
 	}
 
-	public static void copyFile(CVCWidgetsDescriptor cd, JasperReportsConfiguration jConf, String path) {
+	public static void copyFile(ComponentDescriptor cd, JasperReportsConfiguration jConf, String path) {
 		if (Misc.isNullOrEmpty(path))
 			return;
 		IFile f = (IFile) jConf.get(FileUtils.KEY_FILE);
@@ -149,12 +158,8 @@ public class UIManager {
 			// } else {
 			getDescriptor(jConf, cd.getModule());
 			String uri = parentsPath.get(cd);
-			if (uri != null) {
-				URL url = new URL(uri + path);
-				if (url.sameFile(dest.toURI().toURL()))
-					return;
-				is = url.openStream();
-			}
+			if (uri != null)
+				is = new URL(uri + path).openStream();
 			// }
 			if (is != null) {
 				org.apache.commons.io.FileUtils.copyInputStreamToFile(is, dest);
@@ -169,7 +174,7 @@ public class UIManager {
 		}
 	}
 
-	public static Image getThumbnail(CVCWidgetsDescriptor cd) {
+	public static Image getThumbnail(ComponentDescriptor cd) {
 		Image img = imageCache.get(cd);
 		if (img == null && !Misc.isNullOrEmpty(cd.getThumbnail())) {
 			try {
@@ -194,9 +199,9 @@ public class UIManager {
 		return img;
 	}
 
-	private static Map<CVCWidgetsDescriptor, ResourceBundleMessageProvider> rbMap = new HashMap<CVCWidgetsDescriptor, ResourceBundleMessageProvider>();
+	private static Map<ComponentDescriptor, ResourceBundleMessageProvider> rbMap = new HashMap<ComponentDescriptor, ResourceBundleMessageProvider>();
 
-	public static String getProperty(CVCWidgetsDescriptor cd, String key) {
+	public static String getProperty(ComponentDescriptor cd, String key) {
 		String uri = parentsPath.get(cd);
 		if (uri != null) {
 			try {
@@ -220,23 +225,23 @@ public class UIManager {
 
 	}
 
-	public static List<CVCWidgetsDescriptor> getModules(JasperReportsConfiguration jConfig) {
-		List<CVCWidgetsDescriptor> res = new ArrayList<CVCWidgetsDescriptor>();
+	public static List<ComponentDescriptor> getModules(JasperReportsConfiguration jConfig) {
+		List<ComponentDescriptor> res = new ArrayList<ComponentDescriptor>();
 		if (cachePlugin == null)
 			initCachePlugin();
 		res.addAll(cachePlugin.values());
-		Map<String, CVCWidgetsDescriptor> modules = initCacheJConfig(jConfig);
+		Map<String, ComponentDescriptor> modules = initCacheJConfig(jConfig);
 		res.addAll(modules.values());
 		return res;
 	}
 
-	public static CVCWidgetsDescriptor getDescriptor(final JasperReportsConfiguration jConfig, String module) {
+	public static ComponentDescriptor getDescriptor(final JasperReportsConfiguration jConfig, String module) {
 		if (cachePlugin == null)
 			initCachePlugin();
-		CVCWidgetsDescriptor d = cachePlugin.get(module);
+		ComponentDescriptor d = cachePlugin.get(module);
 		if (d != null)
 			return d;
-		Map<String, CVCWidgetsDescriptor> modules = cache.get(jConfig);
+		Map<String, ComponentDescriptor> modules = cache.get(jConfig);
 		if (modules == null)
 			modules = initCacheJConfig(jConfig);
 		// let's look if we cached something
@@ -245,13 +250,15 @@ public class UIManager {
 
 	protected static CustomVisualizationActivator initCachePlugin() {
 		if (cachePlugin == null)
-			cachePlugin = new HashMap<String, CVCWidgetsDescriptor>();
+			cachePlugin = new HashMap<String, ComponentDescriptor>();
 		CustomVisualizationActivator activator = CustomVisualizationActivator.getDefault();
-		Enumeration<?> en = activator.getBundle().findEntries("components", "*.json", true); //$NON-NLS-1$
+		Enumeration<?> en = activator.getBundle().findEntries("components", //$NON-NLS-1$
+				"*.json", true); //$NON-NLS-1$
 		while (en != null && en.hasMoreElements()) {
 			URL url = (URL) en.nextElement();
 			try {
-				CVCWidgetsDescriptor cd = RESOLVER.resolveURL(url);
+				// use jackson to read the file
+				ComponentDescriptor cd = readURL(url);
 				if (cd != null) {
 					cachePlugin.put(cd.getModule(), cd);
 					String purl = url.toURI().toASCIIString();
@@ -270,17 +277,17 @@ public class UIManager {
 		return activator;
 	}
 
-	protected static Map<String, CVCWidgetsDescriptor> initCacheJConfig(final JasperReportsConfiguration jConf) {
-		Map<String, CVCWidgetsDescriptor> modules = cache.get(jConf);
+	protected static Map<String, ComponentDescriptor> initCacheJConfig(final JasperReportsConfiguration jConf) {
+		Map<String, ComponentDescriptor> modules = cache.get(jConf);
 		if (modules == null) {
-			modules = new HashMap<String, CVCWidgetsDescriptor>();
+			modules = new HashMap<String, ComponentDescriptor>();
 			cache.put(jConf, modules);
 			jConf.getPrefStore().addPropertyChangeListener(new IPropertyChangeListener() {
 
 				@Override
 				public void propertyChange(org.eclipse.jface.util.PropertyChangeEvent event) {
 					if (event.getProperty().equals(CVCDescriptorsPreferencePage.RESOURCE_PATHS)) {
-						for (CVCWidgetsDescriptor cd : cache.get(jConf).values()) {
+						for (ComponentDescriptor cd : cache.get(jConf).values()) {
 							imageCache.remove(cd);
 							parentsPath.remove(cd);
 						}
@@ -297,7 +304,7 @@ public class UIManager {
 							&& evt.getNewValue() instanceof PropertyChangeEvent) {
 						evt = (PropertyChangeEvent) evt.getNewValue();
 						if (evt.getPropertyName().equals(CVCDescriptorsPreferencePage.RESOURCE_PATHS)) {
-							for (CVCWidgetsDescriptor cd : cache.get(jConf).values()) {
+							for (ComponentDescriptor cd : cache.get(jConf).values()) {
 								imageCache.remove(cd);
 								parentsPath.remove(cd);
 							}
@@ -311,9 +318,9 @@ public class UIManager {
 
 				@Override
 				public void dispose() {
-					Map<String, CVCWidgetsDescriptor> map = cache.get(jConf);
+					Map<String, ComponentDescriptor> map = cache.get(jConf);
 					if (map != null) {
-						for (CVCWidgetsDescriptor cd : map.values()) {
+						for (ComponentDescriptor cd : map.values()) {
 							Image img = imageCache.get(cd);
 							if (img != null)
 								img.dispose();
@@ -343,7 +350,7 @@ public class UIManager {
 					URL url = null;
 					try {
 						url = f.toURI().toURL();
-						CVCWidgetsDescriptor cd = RESOLVER.resolveURL(url);
+						ComponentDescriptor cd = readURL(url);
 						if (cd != null) {
 							modules.put(cd.getModule(), cd);
 							parentsPath.put(cd, f.getParentFile().toURI().toASCIIString());
@@ -364,5 +371,110 @@ public class UIManager {
 
 	public static boolean isInPlugin(ComponentDescriptor cd) {
 		return cachePlugin.values().contains(cd);
+	}
+
+	private static ComponentDescriptor readURL(URL url) {
+		ObjectMapper mapper = new ObjectMapper();
+		try {
+			BufferedReader in = new BufferedReader(new InputStreamReader(url.openStream(), "UTF-8"));
+			mapper.configure(JsonGenerator.Feature.ESCAPE_NON_ASCII, true);
+			return mapper.readValue(in, ComponentDescriptor.class);
+		} catch (JsonParseException e) {
+			CustomVisualizationActivator.getDefault().logError(e);
+		} catch (JsonMappingException e) {
+			CustomVisualizationActivator.getDefault().logError(e);
+		} catch (IOException e) {
+			CustomVisualizationActivator.getDefault().logError(e);
+		} catch (Throwable e) {
+			CustomVisualizationActivator.getDefault().logError(e);
+		}
+		return null;
+	}
+
+	public static ItemPropertyDescription<?> createItemPropertyDescriptor(ComponentDescriptor cd,
+			ComponentPropertyDescriptor cpd, JasperReportsConfiguration jConfig) {
+		ItemPropertyDescription<?> desc = null;
+		Number min = null;
+		Number max = null;
+		Number def = null;
+		if (cpd.getType().equalsIgnoreCase("path")) {
+			desc = new FilePropertyDescription(cpd.getName(), cd.i18n(cpd.getLabel()), cd.i18n(cpd.getDescription()),
+					cpd.isMandatory(), cpd.getDefaultValue());
+			desc.setjConfig(jConfig);
+		} else if (cpd.getType().equalsIgnoreCase("combo")) {
+			if (cpd.getOptions2() != null) {
+				String[][] opts = cpd.getOptions2();
+				String[][] i18nOpts = new String[opts.length][2];
+				for (int i = 0; i < opts.length; i++) {
+					i18nOpts[i][0] = opts[i][0];
+					i18nOpts[i][1] = cd.i18n(opts[i][1]);
+				}
+				desc = new ComboItemPropertyDescription<String>(cpd.getName(), cd.i18n(cpd.getLabel()),
+						cd.i18n(cpd.getDescription()), cpd.isMandatory(), cpd.getDefaultValue(), i18nOpts);
+			} else
+				desc = new ComboItemPropertyDescription<String>(cpd.getName(), cd.i18n(cpd.getLabel()),
+						cd.i18n(cpd.getDescription()), cpd.isMandatory(), cpd.getDefaultValue(), cpd.getOptions());
+		} else if (cpd.getType().equalsIgnoreCase("color"))
+			desc = new ColorPropertyDescription<String>(cpd.getName(), cd.i18n(cpd.getLabel()),
+					cd.i18n(cpd.getDescription()), cpd.isMandatory(), cpd.getDefaultValue());
+
+		else if (cpd.getType().equalsIgnoreCase("float")) {
+			if (cpd.getMin() != null)
+				min = new Float(cpd.getMin());
+			if (cpd.getMax() != null)
+				max = new Float(cpd.getMax());
+			if (cpd.getDefaultValue() != null)
+				def = new Float(cpd.getDefaultValue());
+			desc = new NumberPropertyDescription<Float>(cpd.getName(), cd.i18n(cpd.getLabel()),
+					cd.i18n(cpd.getDescription()), cpd.isMandatory(), (Float) def, min, max) {
+				@Override
+				public Class<?> getType() {
+					if (defaultValue != null)
+						return defaultValue.getClass();
+					return Float.class;
+				}
+			};
+		} else if (cpd.getType().equalsIgnoreCase("integer")) {
+			if (cpd.getMin() != null)
+				min = new Integer(cpd.getMin());
+			if (cpd.getMax() != null)
+				max = new Integer(cpd.getMax());
+			if (cpd.getDefaultValue() != null)
+				def = new Integer(cpd.getDefaultValue());
+			desc = new NumberPropertyDescription<Integer>(cpd.getName(), cd.i18n(cpd.getLabel()),
+					cd.i18n(cpd.getDescription()), cpd.isMandatory(), (Integer) def, min, max) {
+
+				@Override
+				public Class<?> getType() {
+					if (defaultValue != null)
+						return defaultValue.getClass();
+					return Integer.class;
+				}
+			};
+		} else if (cpd.getType().equalsIgnoreCase("double")) {
+			if (cpd.getMin() != null)
+				min = new BigDecimal(cpd.getMin());
+			if (cpd.getMax() != null)
+				max = new BigDecimal(cpd.getMax());
+			if (cpd.getDefaultValue() != null)
+				def = new BigDecimal(cpd.getDefaultValue());
+			desc = new NumberPropertyDescription<BigDecimal>(cpd.getName(), cd.i18n(cpd.getLabel()),
+					cd.i18n(cpd.getDescription()), cpd.isMandatory(), (BigDecimal) def, min, max) {
+				@Override
+				public Class<?> getType() {
+					if (defaultValue != null)
+						return defaultValue.getClass();
+					return Double.class;
+				}
+			};
+		} else
+
+		{
+			desc = new ItemPropertyDescription<String>(cpd.getName(), cd.i18n(cpd.getLabel()),
+					cd.i18n(cpd.getDescription()), cpd.isMandatory(), cpd.getDefaultValue());
+		}
+		if (desc != null)
+			desc.setReadOnly(cpd.isReadOnly());
+		return desc;
 	}
 }
